syntax = "proto3";
package common;

// 多语言支持：Go 代码生成到 gen/go 目录
option go_package = "youlingserv/gen/go/common;common";

import "google/protobuf/any.proto";

enum StatusCode {
  SUCCESS = 0;
  ERROR = 1;
}

message CommonResponse {
  int32 code = 1;
  string msg = 2;
  google.protobuf.Any data = 3;  // 使用标准Any类型
}